@@ -2,6 +2,7 @@
 	* tag suggest was not working correctly.
 	* tag rename feature implemented
 	* tag rename case sensitive problem
+	* add bookmark only if url and title are not empty
 	
 Tue Jul 14 21:38 EST 2009  Luke Reeve   <luke@neuro-tech.net>
 
